Tests/Resources/Ok/auto_return_type.st
language core;
extend with #type-reconstruction;

fn main(n : Nat) -> auto {
	return succ(n);
}