Tests/Resources/Bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/auto_sum_2.st
language core;
extend with #type-reconstruction, #sum-types;

fn do(n : Nat) -> auto {
	return inl(n)
}

fn main(n : auto) -> Bool + Nat {
	return do(n)
}